export const MICROSERVICE_NAME = {
  USER_SERVICE: 'UserService',
  CHAT_SERVICE: 'ChatService',
};

export const MESSAGE_PATTERN_NAME = {
  USER: {
    PARSE_BEARER_TOKEN: 'user_parse_bearer_token',
    LOGIN: 'user_login',
    GET_USERS: 'user_get_users',
    GET_USER: 'user_get_user',
    SIGN_UP: 'user_sign_up',
  },
};
export const EVENT_PATTERN_NAME = {
  USER: {},
};

export const GRPC_NAME = {
  USER_GRPC: 'USER_GRPC',
  AUTH_GRPC: 'AUTH_GRPC',
  CHAT_GRPC: 'CHAT_GRPC',
};
